--- a/_config.yml
+++ b/_config.yml
@@ -60,10 +60,18 @@ time_format: HH:mm:ss
 per_page: 10
 pagination_dir: page
 
+# Archives
+## 2: Enable pagination
+## 1: Disable pagination
+## 0: Fully Disable
+archive: 1
+category: 1
+tag: 1
+
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: landscape
+theme: TKL
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
