--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Xz3030's Blog
+title: xz3030's Blog
 subtitle:
 description: a fan of CV, RL and ACG ^_^
 author: xuzhejesse
